--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@fortawesome/fontawesome-free/css/all.css";
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap');
+
+.dm-serif-text-regular {
+    font-family: "DMSerifText", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.dm-serif-text-regular-italic {
+    font-family: "DMSerifText", serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+body {
+    font-family: 'DMSerifText' !important;
+    color: white;
+    background-color: #17153B;
+    box-sizing: border-box;
+    padding: 1rem;
+
+    min-width:300px;
+}
