--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
         </div>
         <div>
             <button>Resume</button>
-            <button>Works</button>
+            <button (click)="toWork()">Works</button>
         </div>
     </div>
     <div class="picture">
