--- a/src/app/pages/works/works.component.html
+++ b/src/app/pages/works/works.component.html
@@ -1,1 +1,8 @@
-<p>works works!</p>
+<div class="grid pt-4">
+    <!-- <app-activity-card 
+        *ngFor="let activity of activities" 
+        class="col-12">
+    </app-activity-card> -->
+    <app-activity-card class="col-12">
+    </app-activity-card>
+</div>
